update: run the app via express for backend APIs.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@
 
 $headlineColor: #dd0e0e;
 $linkColor: #ff8d10;
+$successColor: green;
 
 $sans-serif: "Montserrat", Helvetica, sans-serif;
 $serif: "Slabo 27px", Georgia, serif;
