--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -1,14 +1,16 @@
-@-webkit-keyframes error {
-  0%   { background: $headlineColor; }
-  100% { background: inherit; }
-}
+@keyframes fadeOverlay {
+  0% {
+    opacity: 100%;
+  }
 
-@-webkit-keyframes success {
-  0%   { background: green; }
-  100% { background: inherit; }
+  100% {
+    opacity: 0%;
+  }
 }
 
 #signup-form {
+  position: relative;
+
   input {
     width: 100%;
     display: block;
@@ -16,7 +18,6 @@
     font-size: 20px;
     padding-left: 10px;
     font-family: $sans-serif;
-    text-align: center;
     margin-bottom: 20px;
     border: 1px solid #cacaca;
     background-color: #efefef;
@@ -26,24 +27,6 @@
   }
 
   @include clear();
-
-  #email.error {
-    animation:         error 1s 1; /* IE 10+, Fx 29+ */
-  }
-
-  #email.success {
-    animation:         success 1s 1; /* IE 10+, Fx 29+ */
-  }
-
-  .recaptcha-title {
-    display: block;
-    font-size: 14px;
-    text-transform: none;
-
-    &.hidden {
-      display: none;
-    }
-  }
 
   input[type="button"] {
     margin-bottom: 0;
@@ -60,40 +43,50 @@
     }
   }
 
-  label[for="arrival"], label[for="size"] {
+  label[for="arrival"],
+  label[for="size"] {
     font-family: $serif;
     margin-right: 10px;
     display: none;
   }
 
-  select {
-    margin-bottom: 20px;
-    width: 100%;
-    height: 44px;
-    cursor: pointer;
-    font-size: 14px;
-    width: 49%;
-    display: inline;
-    float: left;
-    border: 1px solid #cacaca;
-    background-color: #efefef;
+  &--overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 80%;
+    height: 80%;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.85);
+    font-family: $sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 
-    &:last-of-type {
-      margin-left: 2%;
+    &.hidden {
+      display: none;
     }
 
-    option {
-      font-family: $sans-serif;
+    &.fade {
+      animation-name: fadeOverlay;
+      animation-duration: 3s;
+      animation-delay: 3s;
     }
-  }
 
-  select option:first-of-type {
-    color: #999999;
-  }
+    .overlay-text {
+      display: inline;
 
-  .g-recaptcha {
-    float: left;
-    clear: right;
-    margin-bottom: 30px;
+
+      &.error {
+        color: $headlineColor;
+      }
+
+      &.success {
+        color: $successColor;
+      }
+    }
   }
 }
