--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,12 +4,12 @@
     text-transform: uppercase;
   }
 
-  h1 {
+  h1, h2 {
     font-size: 34px;
     padding: 30px 0 20px;
   }
 
-  h5 {
+  h5, h6 {
     font-size: 20px;
     margin-bottom: 10px;
     color: $headlineColor;
@@ -31,7 +31,7 @@
     &.has-sibling {
       margin-bottom: 0;
     }
-  
+
   }
 }
 
